--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.jorge.appcartoon"
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -21,9 +21,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.jakewharton:butterknife:7.0.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:design:23.+'
     compile files('libs/Volley.jar')
+    compile files('libs/imageloder_1.9.4_4cartoon.jar')
+/*    compile 'com.jakewharton:butterknife:7.0.1'*/
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+    /* compile 'com.gordonwong:material-sheet-fab:1.0.1'
+            compile 'com.android.support:design:23.1.0'*/
+    /*    compile 'konifar:fab-transformation:1.0.0'*/
+    compile 'com.android.support:design:23.1.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'in.srain.cube:ultra-ptr:1.0.11'
 }
