recyleview for chaper

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,6 +38,7 @@
         <activity android:name=".TransformToToolbarActivity" />
         <activity android:name=".TransformToSheetActivity" />
         <activity android:name=".ui.activity.CartInsActivity" />
+        <activity android:name="com.jorge.appcartoon.ui.activity.SwipeFinishActivity" />
     </application>
 
 </manifest>
