--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,8 +37,14 @@
         <activity android:name=".TransformToPlayerActivity" />
         <activity android:name=".TransformToToolbarActivity" />
         <activity android:name=".TransformToSheetActivity" />
-        <activity android:name=".ui.activity.CartInsActivity" android:theme="@style/swipeTheme" />
-        <activity android:name="com.jorge.appcartoon.ui.activity.SwipeFinishActivity" android:theme="@style/swipeTheme"/>
+        <activity
+            android:name=".ui.activity.CartInsActivity"
+            android:theme="@style/swipeTheme" />
+        <activity
+            android:name=".ui.activity.SwipeFinishActivity"
+            android:theme="@style/swipeTheme" />
+        <activity android:name=".ui.activity.EnjoyActivity" >
+        </activity>
     </application>
 
 </manifest>
