--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java', 'src/main/java-gen']
+        }
+    }
     compileOptions {
         encoding "UTF-8"
     }
@@ -39,4 +43,6 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
+    compile 'de.greenrobot:greendao:1.3.7'
+
 }
