--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
     compileOptions {
         encoding "UTF-8"
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
 
 dependencies {
